--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     background-color: #000000;
     color: #F6F6F6;
 }
-img{
+.imagemPerfil{
     padding: 5px;
     height: 490px;
     width: 550px;
@@ -49,18 +49,31 @@ img{
 
 .apresetacaoLink{
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    gap: 40px;
+    align-items: center;
+    gap: 32px;
+    
+}
+
+.apresetacaoLinksSubTitulo{
+    font-family: 'Krona One',sans-serif;
+    font-weight: 400;
+    font-size: 24px;
 }
 
 .apresetacaoBtnLinks{
-    text-decoration: none;
-    background-color: #22D4FD;
-    width: 216px;
+    border: 2px #22D4FD solid;
+    width: 318px;
     text-align: center;
     border-radius: 26px;
+    text-decoration: none;
     font-size: 24px;
     padding: 21.5px 0;
-    color: #000000;
+    color: #F6F6F6;
     font-family:'Montserrat', sans-serif;
+}
+
+.apresetacaoBtnLinks:hover{
+    background-color: #272727;
 }
